--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,7 +18,7 @@ tasks:
     generates:
       - ./{{.PROJECT_NAME}}
     cmds:
-      - go build
+      - go build -o {{.PROJECT_NAME}} ./cmd/main.go
 
   run:
     desc: "Runs app"
